feat: Add workflow engine integration and enhance agent system capabilities
- Add workflow engine with WorkflowRoute API endpoints for workflow management
- Integrate workflow engine into unified server with auto-loading capabilities
- Enhance agent configuration with new builtin functions (monitor_progress, coordinate_agents, generate_report, etc.)
- Add comprehensive quality assurance functions (review_output, validate_result, check_compliance, detect_errors)
- Streamline main.cpp configuration with default comprehensive logging and monitoring
- Update server port from 8081 to 8080 in agent configuration
- Add __pycache__/ to .gitignore for Python environment cleanup
- Update FAISS index path to absolute path in config.yaml
- Remove unused workflow_config.yaml file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,6 +202,7 @@ set(AGENT_SERVICES_SOURCES
 
 set(API_SOURCES
     src/api/agent_management_route.cpp
+    src/api/workflow_route.cpp
     src/api/simple_http_server.cpp
     src/api/message_router.cpp
     src/api/http_client.cpp
@@ -247,6 +248,7 @@ set(UTILS_SOURCES
 set(WORKFLOW_SOURCES
     src/workflow/sequential_workflow.cpp
     src/workflow/workflow_engine.cpp
+    src/workflow/workflow_loader.cpp
 )
 
 # Combine all sources
